# Algorithm-Engineering

./: readme.md
Project/: CMakeLists.txt  Image_Enhancer_ppm.cpp  PLAN.txt  aligned.cpp  catch_tests_image_enhancer.cpp  image_enhancer.cpp  main.cpp  parallelized.cpp  vectorized_aligned.cpp
Project Paper/: literature.bib  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex
Project/benchmark_data/: benchmark.xlsx
Project/catch/: CMakeLists.txt
Project/image_enhancer/: CMakeLists.txt
Project/image_enhancer/include/: Image_Enhancer.hpp
Project/image_enhancer_implementation/: CMakeLists.txt
Project/image_enhancer_implementation/include/: implementation.cpp  implementation.hpp
Project/junk/: Image_Enhancer_ppm.cpp  aligned.cpp  parallelized.cpp  test
Project/output/: output_enhanced.ppm  squigles.ppm
Project/samples/: sample_4.ppm  test.ppm
Project/stb/: CMakeLists.txt
Project/tests/: testfile.ppm  testfile_unsupported_max_val.ppm  testfile_unsupported_pixel_val.ppm  testfile_unsupported_ppm_format.ppm
Week 1/: Task1.txt  Task2.txt  Task3.cpp
Week 10/: Task1.txt  Task2.txt
Week 11/: Task1.txt  Task2.txt
Week 12/: Task1.txt
Week 2/: Task2.txt  Task3.cpp  Task3_not_parallelized.cpp
Week 3/: Task1.txt  Task2.txt  Task3.cpp
Week 4/: Benchmark_Environment.txt  Task3.txt
Week 4/Task1/: findings.txt  output.csv  plot.py  sorting_benchmark_threads.cpp
Week 4/Task2/: findings.txt  output.csv  plot.py  sorting_benchmark_size.cpp
Week 5/Task 1/: CMakeLists.txt
Week 5/Task 1/build_example/: CMakeCache.txt  Makefile  cmake_install.cmake
Week 5/Task 1/build_example/lodepng/: Makefile  cmake_install.cmake
Week 5/Task 1/build_example/quantize/: Makefile  cmake_install.cmake
Week 5/Task 1/lodepng/: CMakeLists.txt
Week 5/Task 1/quantize/: CMakeLists.txt
Week 5/Task 2/: CMakeLists.txt  catch_main.cpp  catch_tests_fizzbuzz.cpp
Week 5/Task 2/build_example/: CMakeCache.txt  Makefile  cmake_install.cmake
Week 5/Task 2/build_example/catch/: Makefile  cmake_install.cmake
Week 5/Task 2/build_example/fizzbuzz/: Makefile  cmake_install.cmake
Week 5/Task 2/catch/: CMakeLists.txt
Week 5/Task 2/fizzbuzz/: CMakeLists.txt
Week 5/Task 2/fizzbuzz/include/: fizzbuzz.h
Week 5/Task 2/fizzbuzz/src/: fizzbuzz.cpp
Week 6/: Task1.txt  Task2.txt  Task3.txt  Task4.txt
Week 7/: Task1.txt  Task3.txt
Week 8/: Task1.txt  Task2.txt  Task3.txt
Week 9/: Task1.txt  Task2.txt  Task3.txt  Task4.txt
